[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/level/zipline/ZipLineStand.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.25, 2, 0.25 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.478431, 0.478431, 0.478431, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.125, 1, 0.125 )

[sub_resource type="CylinderShape" id=3]

[node name="ZipLineStand" type="StaticBody"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Hook" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 4 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 3 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
